--- a/res/layout/tutorial.xml
+++ b/res/layout/tutorial.xml
@@ -24,15 +24,15 @@
                 />
 
         <RelativeLayout
-                android:layout_width="match_parent"
+                android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
                 android:layout_below="@+id/spell_name"
                 android:layout_centerHorizontal="true"
                 android:id="@+id/spell_anim_view_l"
                 android:layout_margin="10dp">
 
-            <view android:layout_width="wrap_content"
-                  android:layout_height="wrap_content"
+            <view android:layout_width="fill_parent"
+                  android:layout_height="fill_parent"
                   class="com.wizardfight.views.SpellAnimation"
                   android:id="@+id/spell_anim_view"
                   android:layout_centerHorizontal="true"/>
