--- a/res/xml/tutorial_text.xml
+++ b/res/xml/tutorial_text.xml
@@ -2,25 +2,24 @@
 
 <tutorial>
     <part>
-        <screen>Добро пожаловать! Хотите научиться творить волшебство? Я вам помогу!</screen>
-        <screen>Нужно запомнить, что необходимо зажать клавишу громкости во время выполения заклинания. Расположите телефон в руке так, что бы можно было удобно нажимать на любую из клавиш громкости. Попробуйте нажать на клавишу.</screen>
+        <screen>Хотите научиться творить волшебство? Я вам помогу!</screen>
+        <screen>Необходимо нажать на экран и удерживать касание при выполнении заклинания.</screen>
         <pause>2</pause>
         <ui>3</ui>
         <uih>4</uih>
         <uim>5</uim>
-        <screen>На экране боя можно увидеть два таких индикатора: верхний, отображает ваше состояние, и нижний, состояние противника.</screen>
-        <screen>Зеленая полоска - здоровье. Оно теряется, если противник наложит на вас заклинание. Здоровье можно восстановить специальными заклинаниями.</screen>
-        <screen>Синяя полоска - мана, она нужна для выполнения заклинаний. Каждое заклинание стоит определенное количество маны, она сама востанавливается со временем.</screen>
-        <screen>Первым заклинанием, которое мы выучим, будет "Конус Холода". Это атакующее заклинание, оно наносит незначительный урон по противнику.</screen>
-        <screen>Внимательно посмотрите, как нужно выполнять это заклинание и попробуйте повторить это движение. Не забывайте нажимать на клавишу громкости.</screen>
+        <screen>Верхняя часть экрана представляет Ваше состояние, нижнее - противника.</screen>
+        <screen>Зеленая полоска - здоровье. Оно теряется при получении урона и восстанавливается специальными заклинаниями.</screen>
+        <screen>Синяя полоска - мана, магическая сила. Мана тратится на заклинания и востанавливается со временем.</screen>
+        <screen>Первое заклинание - "Конус Холода". Наносит незначительный урон.</screen>
+        <screen>Просмотрите, как выполнять это заклинание, и повторите это движение.</screen>
     </part>
     <part>
-        <screen>Второе заклинание - "Кольцо Огня". Это тоже атакующее заклинание, но оно наносит уже большой урон. </screen>
-        <screen>Попробуйте повторить это движение. Не забывайте нажимать на клавишу громкости.</screen>
+        <screen>Второе заклинание - "Кольцо Огня". Наносит большой урон.</screen>
     </part>
     <part>
-    <screen>"Исцеление". Это восстанавливающее заклинание. Восполняет часть здоровья.</screen>
-</part>
+		<screen>"Исцеление". Мгновенно восстанавливает много здоровья.</screen>
+	</part>
     <part>
         <screen>"Порча". Наносит периодический урон противнику.</screen>
     </part>
@@ -32,9 +31,9 @@
     </part>
     <part>
         <screen>"Божественный Щит". Блокирует один удар противника.</screen>
-        <screen>Если вы забудете заклинания, то можете быстро посмотреть их и их свойства в книге заклинаний.</screen>
 </part>
     <part>
         <screen>Поздравляю! Вы успешно прошли обучение! Вы настоящий маг!</screen>
+		<screen>Полное описание магии находится в Книге заклинаний.</screen>
     </part>
 </tutorial>
