--- a/res/layout/tutorial.xml
+++ b/res/layout/tutorial.xml
@@ -12,7 +12,7 @@
             android:layout_height="wrap_content"
             android:layout_centerInParent="true">
         <TextView
-                android:layout_width="wrap_content"
+                android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
                 android:textAppearance="?android:attr/textAppearanceLarge"
                 android:id="@+id/spell_name"
