--- a/res/layout/main_menu.xml
+++ b/res/layout/main_menu.xml
@@ -33,21 +33,21 @@
                     android:layout_height="wrap_content"
 
                     android:onClick="goToCreateGame"
-                    android:text="@string/Create_game" android:visibility="visible"/>
+                    android:text="@string/create_game" android:visibility="visible"/>
 
             <Button
                     android:id="@+id/buttonJoinGame"
                     android:layout_width="fill_parent"
                     android:layout_height="wrap_content"
                     android:onClick="goToJoinGame"
-                    android:text="@string/Join_game" android:visibility="visible"/>
+                    android:text="@string/join_game" android:visibility="visible"/>
 
             <Button
                     android:id="@+id/buttonTestMode"
                     android:layout_width="fill_parent"
                     android:layout_height="wrap_content"
                     android:onClick="goToTestMode"
-                    android:text="Test mode"/>
+                    android:text="@string/training"/>
 
             <Button
                     android:id="@+id/buttonDesktopConnection"
@@ -61,13 +61,13 @@
                     android:layout_height="wrap_content"
                     android:layout_marginTop="40dp"
                     android:onClick="goToHelp"
-                    android:text="@string/Tutorial"/>
+                    android:text="@string/tutorial"/>
 
             <Button
                     android:layout_width="fill_parent"
                     android:layout_height="wrap_content"
                     android:onClick="goToSpellbook"
-                    android:text="@string/Spellbook"/>
+                    android:text="@string/spellbook"/>
 
             <Button
                     android:layout_width="fill_parent"
