--- a/res/layout/net_conn_not_found.xml
+++ b/res/layout/net_conn_not_found.xml
@@ -1,24 +1,23 @@
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context=".SmartActivity">
-
+<?xml version="1.0" encoding="UTF-8"?>
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+              android:layout_width="fill_parent"
+              android:layout_height="fill_parent"
+              android:gravity="center_horizontal|center_vertical"
+              android:orientation="vertical" >
+    <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textAppearance="?android:attr/textAppearanceMedium"
+            android:text="@string/no_network_conn2"
+            android:id="@+id/net_conn_status"
+            android:layout_marginTop="35dp"
+            android:layout_marginBottom="20dp" />
     <Button
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_height="55dp"
         android:text="@string/show_settings"
         android:id="@+id/net_settings_button"
-        android:layout_centerVertical="true"
-        android:layout_centerHorizontal="true" />
+        style="@style/ClientWaitingDialog.Button"/>
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceMedium"
-        android:text="@string/no_network_conn"
-        android:id="@+id/net_conn_status"
-        android:layout_above="@+id/net_settings_button"
-        android:layout_centerHorizontal="true"
-        android:layout_marginBottom="139dp" />
-</RelativeLayout>
+
+</LinearLayout>
