--- a/res/layout/client_waiting.xml
+++ b/res/layout/client_waiting.xml
@@ -11,8 +11,8 @@
             android:indeterminate="true" 
             android:layout_marginTop="35dp" 
             android:layout_marginBottom="20dp" />
-    <view android:id="@+id/button_cancel_waiting" 
-        android:layout_width="220dp"
+    <view android:id="@+id/button_cancel_waiting"
+        android:layout_width="match_parent"
         android:layout_height="55dp"
         class="com.wizardfight.views.CancelButton" 
         android:text="@string/cancel"
