--- a/res/layout/net_conn_not_found.xml
+++ b/res/layout/net_conn_not_found.xml
@@ -3,7 +3,7 @@
               android:layout_width="fill_parent"
               android:layout_height="fill_parent"
               android:gravity="center_horizontal|center_vertical"
-              android:orientation="vertical" >
+              android:orientation="vertical">
     <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -11,13 +11,12 @@
             android:text="@string/no_network_conn2"
             android:id="@+id/net_conn_status"
             android:layout_marginTop="35dp"
-            android:layout_marginBottom="20dp" />
-    <Button
-        android:layout_width="wrap_content"
-        android:layout_height="55dp"
-        android:text="@string/show_settings"
-        android:id="@+id/net_settings_button"
-        style="@style/ClientWaitingDialog.Button"/>
-
-
+            android:layout_marginBottom="20dp"/>
+    <view
+            android:layout_width="match_parent"
+            android:layout_height="55dp"
+            class="com.wizardfight.views.CancelButton"
+            android:text="@string/show_settings"
+            android:id="@+id/net_settings_button"
+            style="@style/ClientWaitingDialog.Button"/>
 </LinearLayout>
