--- a/res/layout/client_waiting.xml
+++ b/res/layout/client_waiting.xml
@@ -14,7 +14,7 @@
     <view android:id="@+id/button_cancel_waiting"
         android:layout_width="match_parent"
         android:layout_height="55dp"
-        class="com.wizardfight.views.CancelButton" 
+        class="com.wizardfight.views.RectButton" 
         android:text="@string/cancel"
-        style="@style/ClientWaitingDialog.Button" />
+        style="@style/WDialog.Button" />
 </LinearLayout>
