--- a/res/layout/spellbook.xml
+++ b/res/layout/spellbook.xml
@@ -7,7 +7,7 @@
     <view
             android:layout_width="fill_parent"
             android:layout_height="fill_parent"
-            class="com.wizardfight.CustomScroller"
+            class="com.wizardfight.PagesScroller"
             android:scaleType="fitXY"
             android:id="@+id/horizontalScrollView">
         <LinearLayout
