--- a/res/xml/prefs.xml
+++ b/res/xml/prefs.xml
@@ -6,5 +6,10 @@
         android:entries="@array/recognition_types_labels"
         android:entryValues="@array/recognition_types_values"
         android:summary="@string/recognition_type_summary"
-        android:defaultValue="23.08.14"/>
+        android:defaultValue="23.08.14" />
+    <EditTextPreference
+        android:title="@string/player_name"
+        android:key="player_name"
+        android:summary="@string/player_name_summary"
+        android:defaultValue="@string/wizard" />
 </PreferenceScreen>
