--- a/res/layout/spellbook.xml
+++ b/res/layout/spellbook.xml
@@ -2,11 +2,11 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
               android:orientation="vertical"
               android:layout_width="fill_parent"
-              android:layout_height="fill_parent"
-              android:background="@drawable/wood">
+              android:layout_height="wrap_content"
+              android:background="@drawable/wood" android:gravity="center">
     <view
             android:layout_width="fill_parent"
-            android:layout_height="fill_parent"
+            android:layout_height="wrap_content"
             class="com.wizardfight.PagesScroller"
             android:scaleType="fitXY"
             android:id="@+id/horizontalScrollView">
