--- a/res/xml/device_list_item.xml
+++ b/res/xml/device_list_item.xml
@@ -3,5 +3,6 @@
     android:layout_width="wrap_content"
     android:background="@android:drawable/list_selector_background"
     android:padding="10dp"
-    android:textSize="20dp" >
+    android:textSize="20dp"
+    android:textColor="#000000" >
 </TextView>
